--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,11 @@
           {{ post.title }} - {{ post.content }}
         </li>
       </ul>
-      <p *ngIf="isFetching">Loading...</p>
+      <p *ngIf="isFetching && !error">Loading...</p>
+      <div class="alert alert-danger" *ngIf="error">
+        <h1>An Error Occured</h1>
+        <p>{{ error }}</p>
+      </div>
     </div>
   </div>
 </div>
