--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,6 +40,7 @@
       <div class="alert alert-danger" *ngIf="error">
         <h1>An Error Occured</h1>
         <p>{{ error }}</p>
+        <button class="btn btn-warning" (click)="onHandleError()">Okay</button>
       </div>
     </div>
   </div>
